--- a/.gitignore
+++ b/.gitignore
@@ -129,11 +129,12 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+.vscode/
+.DS_Store
 
 # Spyder project settings
 .spyderproject
 .spyproject
-
 # Rope project settings
 .ropeproject
 
