--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 python = "^3.12"
 pytest = "^8.3.3"
 torch = "^2.5.1"
+ruff = "^0.7.2"
 
 
 [tool.poetry.group.dev.dependencies]
