--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ ruff = "^0.7.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
+pre-commit = "^4.0.1"
+ruff = "^0.7.2"
+black = "^24.10.0"
 
 [build-system]
 requires = ["poetry-core"]
