--- a/.github/workflows/auto-tag.yaml
+++ b/.github/workflows/auto-tag.yaml
@@ -18,7 +18,6 @@ jobs:
         run: |
           git fetch --tags
           latest_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
-          # Strip the 'v' prefix from the latest tag
           latest_tag_without_v=${latest_tag#v}
           echo "latest_tag=$latest_tag" >> $GITHUB_ENV
           echo "latest_tag_without_v=$latest_tag_without_v" >> $GITHUB_ENV
@@ -37,40 +36,39 @@ jobs:
             increment_type="patch"
           fi
 
-          echo "Increment type: $increment_type"
           echo "increment_type=$increment_type" >> $GITHUB_ENV
 
       - name: Increment the Version
         id: increment_version
         run: |
-          # Read the major, minor, and patch versions from the latest tag without 'v' prefix
           IFS='.' read -r major minor patch <<< "$latest_tag_without_v"
 
-          # Increment based on the determined type
           case "$increment_type" in
             major) major=$((major + 1)); minor=0; patch=0 ;;
             minor) minor=$((minor + 1)); patch=0 ;;
             patch) patch=$((patch + 1)) ;;
           esac
 
-          # Define the new tag with 'v' prefix
           new_tag="v${major}.${minor}.${patch}"
-          echo "New tag: $new_tag"
           echo "new_tag=$new_tag" >> $GITHUB_ENV
 
       - name: Check if Tag Already Exists
+        id: check_tag_exists
         run: |
           if git rev-parse "$new_tag" >/dev/null 2>&1; then
-            echo "Tag $new_tag already exists. Exiting..."
-            exit 0
+            echo "Tag $new_tag already exists. Skipping..."
+            echo "tag_exists=true" >> $GITHUB_ENV
+          else
+            echo "tag_exists=false" >> $GITHUB_ENV
           fi
 
       - name: Push the New Tag
+        if: env.tag_exists == 'false'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
           git tag "$new_tag"
           git push origin "$new_tag"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
